# esp32-web-server

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  get_req.c  get_req.h  main.c  test.c  write_file.c  write_file.h
